--- a/pom.xml
+++ b/pom.xml
@@ -26,16 +26,16 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <scope>runtime</scope>
-    </dependency>
+	    <dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-data-jpa</artifactId>
+	    </dependency>
+	
+	    <dependency>
+	      <groupId>mysql</groupId>
+	      <artifactId>mysql-connector-java</artifactId>
+	      <scope>runtime</scope>
+	    </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -48,11 +48,20 @@
 			<scope>test</scope>
 		</dependency>
 		
-		<!-- apenas necessário a partir do spring 2.3 -->
-	<dependency>
-      	<groupId>org.springframework.boot</groupId>
-      	<artifactId>spring-boot-starter-validation</artifactId>
-	</dependency>
+		<dependency>
+	      	<groupId>org.springframework.boot</groupId>
+	      	<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
+		<dependency>
+      		<groupId>org.thymeleaf.extras</groupId>
+      		<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+      		<scope>compile</scope>
+    	</dependency>
 	</dependencies>
 
 	<build>
